k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: developer-sandbox
  labels:
    istio-injection: enabled
