k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service
  namespace: yas

spec:
  replicas: 1

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
      - name: product-service
        image: anhhnus/product-service:main

        imagePullPolicy: Always

        ports:
        - containerPort: 8080
