k8s/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service
  namespace: yas

spec:
  type: NodePort

  selector:
    app: product-service

  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
