k8s/service-aliases.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront-nextjs
  namespace: yas
spec:
  type: ExternalName
  externalName: storefront-ui.yas.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: backoffice-nextjs
  namespace: yas
spec:
  type: ExternalName
  externalName: backoffice-ui.yas.svc.cluster.local
