k8s/yas-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: yas
spec:
  type: ExternalName
  externalName: ingress-nginx-controller.ingress-nginx.svc.cluster.local
