k8s/yas-backend-apis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yas-backend-apis-ingress
  namespace: yas
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.yas.local.com
    http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 80
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart
            port:
              number: 80
      - path: /customer
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 80
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 80
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: media
            port:
              number: 80
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 80
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: search
            port:
              number: 80
      - path: /tax
        pathType: Prefix
        backend:
          service:
            name: tax
            port:
              number: 80
  - host: nginx
    http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 80
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart
            port:
              number: 80
      - path: /customer
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 80
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 80
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: media
            port:
              number: 80
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 80
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: search
            port:
              number: 80
      - path: /tax
        pathType: Prefix
        backend:
          service:
            name: tax
            port:
              number: 80
